--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
-
+.idea/
 # Windows shortcuts
 *.lnk
 
@@ -45,3 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.iml
+*.xml
+*.xml
+*.xml
+.idea/other.xml
